Remove demo mode functionality (#250)